--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 
 <body>
     <section id="formulaire_contact">
-        <div class="container-fluid">
+        <div class="container-fluid ocean_background">
             <div class="container">
                 <h1 class="text-center mb-5">Formulaire de contact</h1>
                 <form>
