--- a/contact.html
+++ b/contact.html
@@ -10,44 +10,51 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Monoton" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title>Geoffroy Sanchez - Contact</title>
 </head>
 
 <body>
-    <section id="formulaire_contact">
-        <div class="container-fluid ocean_background">
-            <div class="container">
-                <h1 class="text-center mb-5">Formulaire de contact</h1>
+    <section id="formulaire_contact" class="ocean_background">
+        <div class="container-fluid  pt-5 pb-5">
+            <div class="container bg_container">
+                <h1 class="text-center pt-5 pb-5">Formulaire de contact</h1>
                 <form>
                     <div class="blockprincipal mb-5 row">
                         <div class="block1 col-md-12 col-lg-6">
                             <label for="sexe" class="label ml-3 mt-3 w-25 text-center">*Sexe :</label>
-                            <div>
-                                <input type="radio" id="homme" name="sexe" value="homme" class="ml-1" required>
-                                <label for="homme">Homme</label>
-                            </div>
-                            <div>
-                                <input type="radio" id="femme" name="sexe" value="femme" class="ml-1" required>
-                                <label for="femme">Femme</label>
+                            <div class="d-flex">
+                                <div>
+                                    <input type="radio" id="homme" name="sexe" value="homme" class="ml-1" required>
+                                    <label for="homme">Homme</label>
+                                </div>
+                                <div>
+                                    <input type="radio" id="femme" name="sexe" value="femme" class="ml-1" required>
+                                    <label for="femme">Femme</label>
+                                </div>
                             </div>
                             <div class="d-flex flex-column">
                                 <label for="nom" class="label ml-3 w-25 text-center">*Nom :</label>
-                                <input type="text" name="nom" id="nom" placeholder="Ex : Jean" class="ml-1 mb-2 w-75" required>
+                                <input type="text" name="nom" id="nom" placeholder="Ex : Jean" class="ml-1 mb-2 w-75 rounded"
+                                    required>
                                 <label for="prenom" class="label ml-3 w-25 text-center">*Prenom :</label>
-                                <input type="text" name="prenom" id="prenom" placeholder="Ex : Dupont" class="ml-1 mb-2 w-75" required>
+                                <input type="text" name="prenom" id="prenom" placeholder="Ex : Dupont" class="ml-1 mb-2 w-75 rounded"
+                                    required>
                                 <label for="email" class="label ml-3 w-25 text-center">*Email :</label>
-                                <input type="email" name="email" id="email" placeholder="Ex : email@monemail.fr"
-                                class="ml-1 mb-2 w-75" required>
+                                <input type="email" name="email" id="email" placeholder="Ex : email@monemail.fr" class="ml-1 mb-2 w-75 rounded"
+                                    required>
                             </div>
                         </div>
                         <div class="block2 col-md-12 col-lg-6">
                             <div class="d-flex flex-column">
-                                <label for="naissance" class="label ml-3 mt-3 width_label text-center">*Date de naissance :</label>
+                                <label for="naissance" class="label ml-3 mt-3 width_label text-center">*Date de
+                                    naissance :</label>
                                 <input type="date" id="naissance" name="naissance" min="1900-01-01" max="2018-12-31"
-                                class="ml-1 w-75"required>
+                                    class="ml-1 w-75 rounded" required>
                             </div>
                             <div>
-                                <label for="interet" class="label ml-3 mt-3 width_label text-center">Centres d'intérêt :</label>
+                                <label for="interet" class="label ml-3 mt-3 width_label text-center">Centres d'intérêt
+                                    :</label>
                                 <div>
                                     <input type="checkbox" id="voyager" name="interet" value="voyager" class="ml-1">
                                     <label for="voyager">Voyager</label>
@@ -68,7 +75,8 @@
                         </div>
                     </div>
                     <div class="block3 m-auto d-flex flex-column">
-                        <select id="monselect" class="select_width mb-3 mt-3">
+                        <label for="monselect" class="label mt-3 margin_label_select text-center">*Type de demande :</label>
+                        <select id="monselect" class="select_width mb-3 mt-3 rounded">
                             <option value="valeur1">Valeur 1</option>
                             <option value="valeur2">Valeur 2</option>
                             <option value="valeur3">Valeur 3</option>
@@ -80,8 +88,10 @@
                             <option value="valeur9">Valeur 9</option>
                             <option value="valeur10">Valeur 10 </option>
                         </select>
-                        <textarea class="mb-3 textarea_margin" placeholder="Votre message..."></textarea>
-                        <input type="submit" value="Envoyer" class="w-25 mb-2 boutton_margin">
+                        <label for="textarea"></label>
+                        <textarea id="textarea" class="textarea_margin rounded" placeholder="Votre message..."></textarea>
+                        <input type="submit" value="Envoyer" class="w-25 mb-2 mt-3 boutton_margin">
+                        <p class="text-right pr-5">*Champs obligatoire</p>
                     </div>
                 </form>
             </div>
