--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a class="white_link" href="coucou.html" target="_blank">ACHETER</a>
         <a class="white_link" href="coucou.html" target="_blank">L'HISTOIRE</a>
         <a class="white_link" href="coucou.html" target="_blank">CALENDRIER</a>
-        <a class="white_link" href="contact.html" target="_blank">CONTACT</a>
+        <a class="white_link" href="contact.php" target="_blank">CONTACT</a>
         <a class="white_link" href="coucou.html" target="_blank">À PROPOS</a>
     </nav>
     <div class="left_side_text">
